library/general/gpuresourcelimits/samples/init-gpu-exceeds-limit/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sGpuResourceLimits
metadata:
  name: max-gpu-per-container
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    maxGpuPerContainer: 4
